# Mul_in_ONE

./: .envrc  .envrc.example  .gitignore  .gitmodules  GEMINI.md  LICENSE  NAT_ISSUE_PYTHON314_COMPATIBILITY.md  README.md  REFACTOR_CHECKLIST.md  REFACTOR_PROGRESS.md  flake.nix  index.html  package.json  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/workflows/: main.yml
alembic/versions/: 20240722_0001_initial_schema.py  20251202_0004_add_fastapi_users_auth_tables.py  634ef3ac2bc0_add_embedding_fields_to_api_profiles.py  e23b22c205c4_add_tenant_embedding_api_profile.py  fa1a139f2bc3_add_background_column_to_persona_table.py
assets/: MermaidService-B6BcjbW_-CFtFC7Qp.js  index-CZ0vG9QC.css  index-D9MXyzUu.js  mermaid.esm.min-DVNKuCK_.js
configs/: docker-compose.milvus.local.yml
docs/: .~lock.邦多利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx#  ENV_CONFIG_README_PATCH.md  architecture.md  authentication.md  backend_service_design.md  email_verification_and_captcha.md  roadmap.md  ~$利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx  邦多利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx
personas/: api_configuration.yaml.example  persona.yaml.example
scripts/: check_db.py  db_control.sh  diagnose.sh  milvus_control.sh  rebuild_db.sh  rebuild_milvus_and_postgres.sh  recreate_milvus_collections.py  start_backend.ps1  start_backend.sh
src/mio_frontend/: package.json
src/mul_in_one_nemo.egg-info/: .gitignore  PKG-INFO  (+2 more)
tests/: conftest.py  test_rag_service_db_resolution.py  test_service_sessions_api.py
(+52 files in other folders)
