[project]
name = "mul-in-one-nemo"
version = "0.1.0"
description = "Multi-agent social chat CLI built on NVIDIA NeMo Agent Toolkit"
authors = [{name = "Mul in One Team"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "nvidia-nat>=0.6.0",
    "nvidia-nat-langchain>=1.3.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "cryptography>=43.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "langchain-community~=0.0",
    "lxml>=5.2.2",
    "langchain-openai>=0.1.0",
    "pytest-asyncio>=0.23",
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mul-in-one-nemo = "mul_in_one_nemo.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
# Ignore external NeMo-Agent-Toolkit tests to avoid dependency/env noise during local development
addopts = "-q --ignore=external/NeMo-Agent-Toolkit"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
